# ThorsHookDetector

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
ThorsHookDetector/: CMakeLists.txt
ThorsHookDetector/include/: decompilation.hpp  hookhandler.hpp  memory.hpp  util.hpp
ThorsHookDetector/src/: decompilation.cpp  hookhandler.cpp  main.cpp  memory.cpp  util.cpp
